Adicionar o CRUD dos cursos